# transformers-whisper-finetuner

./: .gitignore  README.md  pyproject.toml
src/whisper_finetuner/: __init__.py  train.py
