[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-finetuner"
version = "0.1.0"
description = "Fine-tune OpenAI Whisper models for specific languages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",  # For WER calculation
    "librosa>=0.10.0",  # Audio processing
    "soundfile>=0.12.0",  # Audio file handling
    "torchaudio>=2.0.0",  # Audio backend for torch
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "tensorboard>=2.14.0",
]

[project.scripts]
finetune-whisper = "whisper_finetuner.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_finetuner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
